2003-08-08  Mike Kestner  <mkestner@ximian.com>

	* sources/gtk-sharp.sources : point to gtkhtml-3.0.8 dir
	* sources/gtkhtml-font-style-enum.patch : ditto
	* sources/makefile : fix some urls, make a get-gtkhtml-code
	target, and use gtkhtml-3.0.8 instead of cvs.

2003-08-06  Duncan Mak  <duncan@ximian.com>

	* sources/Atk.metadata: Make Mr. Art.VpathDash an Opaque struct
	instead of a plain ol' struct.

	* sources/Gtk.metadata (Gtk.Widget.SizeRequest): Mark the
	requisition parameter as out.

2003-08-06  Xavier Amado <xavier@blackbloodstudios.com>

	* gtk/Notebook.custom (CurrentPageWidget): Added a property for
	getting the current page widget directly.

2003-07-30  Duncan Mak  <duncan@ximian.com>

	* sources/Gnome.metadata:
	(CanvasItem.SetValist):
	(CanvasItem.Construct): Hidden, because we don't support va_list
	params.

	(CanvasItem): Hid the constructor, as each subclass has their own
	contsructor and we don't support va_list params.

	(CanvasItem.W2i):
	(CanvasItem.I2w): Marked parameters as ref, so they can be used as
	in/out parameters.

	(Canvas.GetMiterPoints):
	(Canvas.GetColor): Fixed return type to be 'bool' instead of 'int'.

	(CanvasClipgroup.Wind): Fixed property type. It should be an
	Art.WindRule enum, not a UInt.

	(Canvas.W2cAffine):
	(CanvasItem.AffineAbsolute):
	(CanvasItem.AffineRelative):
	(CanvasItem.I2wAffine):
	(CanvasItem.I2cAffine): Hidden, use the impl. in the custom file
	instead.

	* gnome/Canvas.custom: Added for W2cAffine.	
	* gnome/CanvasItem.custom: Reformatted. Added AffineRelative,
	AffineAbsolute, I2wAffine, I2cAffine. These are needed because of
	the 'const double affine[6]' parameter.

2003-07-29  Duncan Mak  <duncan@ximian.com>

	* sources/Gtk.metadata:
	* api/gtk-api.xml: Marked the arguments to GetSelectionBounds and
	GetLayoutOffsets as out params.
	
2003-07-28  Duncan Mak  <duncan@ximian.com>

	* glade/XML.custom: Added new convenience factory methods,
	FromStream and FromAssembly.
