@@ -6,6 +6,8 @@ gtk+-2.2.2/gtk Gtk libgtk-win32-2.0-0.dll
 libgnome-2.0.1/libgnome Gnome gnome-2
 libgnomecanvas-2.0.1/libgnomecanvas Gnome gnomecanvas-2
 libgnomeui-2.0.1/libgnomeui Gnome gnomeui-2
+libgnomeprint-2.2.1.3/libgnomeprint Gnome gnomeprint-2-2
+libgnomeprintui-2.2.1.3/libgnomeprintui Gnome gnomeprint-2-2
 gtkhtml-3.0.8/src Gtk gtkhtml-3.0
 libglade-2.0.0/glade Glade libglade-2.0-0.dll
 libart_lgpl-2.3.10 Art art_lgpl
